syntax = "proto3";

import "google/protobuf/empty.proto";

package serviceaccount_key;

message Identifier {
    string GUID = 1;
}

message Incomplete {
    string Name = 1;
    string Description = 2;
    bytes PublicKey = 3; // <- this one represents a json encoded bytes result
    string ServiceAccountGUID = 4;
}

message Complete {
    Identifier Identifier = 1;
    Incomplete Incomplete = 2;
}

message ClientKey {
    string ServiceAccountGUID = 1;
    string GUID = 2;
    bytes PrivateKey = 3;
}

service Manager {
    rpc Get(Identifier) returns (Complete) {}
    rpc Create(Incomplete) returns (ClientKey) {}
    rpc Update(Complete) returns (google.protobuf.Empty) {}
    rpc Delete(Identifier) returns (google.protobuf.Empty) {}
}
